--- a/abdulloh/index.html
+++ b/abdulloh/index.html
@@ -7,7 +7,7 @@
 	<!-- Styles link -->
 	 <link rel="stylesheet" href="style.css">
 	<!-- Scripts link -->
-	 <script src="script.js" defer></script>
+	 <script type="module" src="main.js" defer></script>
 </head>
 <body>
 	<div class="container">
