Add user name input and leaderboard functionality
Introduced user.js to handle user name input and leaderboard updates using localStorage. Updated index.html to use a form for name entry and included user.js. Modified home.html and home.js to display and update the leaderboard after quiz completion. Added styles for the user form in style.css.

--- a/abdulloh/home.html
+++ b/abdulloh/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- Script link -->
      <script type="module" src="home.js" defer></script>
+     <script src="user.js" defer></script>
 </head>
 <body>
     <div class="navbar">
