--- a/abdulloh/index.html
+++ b/abdulloh/index.html
@@ -7,15 +7,17 @@
 	<!-- Styles link -->
 	 <link rel="stylesheet" href="style.css">
 	<!-- Scripts link -->
-	 <script type="module" src="main.js" defer></script>
+	<script src="user.js" defer></script>
 </head>
 <body>
 	<div class="container">
 		<div class="enter">
 			<h1>Khoot Clone o'yini</h1>
 			<p>Khoot Clone o'yiniga xush kelibsiz! O'ynashni boshlash uchun ismingizni kiriting.</p>
-			<input type="text" class="nameInput" id="nameInput" placeholder="Ismingizni kiriting">
-			<button id="startButton">O'yinni boshlash</button>
+			<form id="userForm">
+				<input type="text" class="nameInput" id="nameInput" placeholder="Ismingizni kiriting">
+				<button id="startButton">O'yinni boshlash</button>
+			</form>
 		</div>
 	</div>
 </body>
