--- a/khoot/home.html
+++ b/khoot/home.html
@@ -9,15 +9,16 @@
     <!-- Script link -->
      <script type="module" src="home.js" defer></script>
      <script src="user.js" defer></script>
+     <script src="navbar.js" defer></script>
 </head>
 <body>
     <div class="navbar">
         <div class="nav-container">
             <div class="logo">Khoot Clone</div>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Settings</a>
+                <a href="#" id="home">Home</a>
+                <a href="#" id="about">About</a>
+                <a href="#" id="settings">Settings</a>
             </nav>
         </div>
     </div>
