Refactor JS file structure and improve quiz UI
Moved JavaScript files into a JS/ subdirectory and updated all HTML references accordingly. Removed the About link and related code from the navbar. Improved quiz question rendering, timer display, and result screen UI. Enhanced answer feedback and loading states. Updated style.css for a more modern, responsive design.

--- a/khoot/index.html
+++ b/khoot/index.html
@@ -7,7 +7,7 @@
 	<!-- Styles link -->
 	 <link rel="stylesheet" href="style.css">
 	<!-- Scripts link -->
-	<script src="user.js" defer></script>
+	<script src="JS/user.js" defer></script>
 </head>
 <body>
 	<div class="container">
