--- a/khoot/settings.html
+++ b/khoot/settings.html
@@ -7,8 +7,8 @@
     <!-- Style link -->
     <link rel="stylesheet" href="style.css" />
     <!-- Script link -->
-    <script src="navbar.js" type="module" defer></script>
-    <script src="settings.js" type="module" defer></script>
+    <script src="JS/navbar.js" type="module" defer></script>
+    <script src="JS/settings.js" type="module" defer></script>
   </head>
   <body>
     <div class="navbar">
@@ -16,7 +16,6 @@
         <div class="logo">Khoot Clone</div>
         <nav>
           <a href="#" id="home">Home</a>
-          <a href="#" id="about">About</a>
           <a href="#" id="settings">Settings</a>
         </nav>
       </div>
