--- a/khoot/home.html
+++ b/khoot/home.html
@@ -7,9 +7,9 @@
     <!-- Style link -->
     <link rel="stylesheet" href="style.css">
     <!-- Script link -->
-     <script type="module" src="home.js" defer></script>
-     <script src="user.js" defer></script>
-     <script src="navbar.js" defer></script>
+     <script type="module" src="JS/home.js" defer></script>
+     <script src="JS/user.js" defer></script>
+     <script src="JS/navbar.js" defer></script>
 </head>
 <body>
     <div class="navbar">
@@ -17,7 +17,6 @@
             <div class="logo">Khoot Clone</div>
             <nav>
                 <a href="#" id="home">Home</a>
-                <a href="#" id="about">About</a>
                 <a href="#" id="settings">Settings</a>
             </nav>
         </div>
@@ -29,6 +28,10 @@
     </div>
     <section class="questions-container hidden" id="questionsContainer">
         <p class="questions hidden">Hello word</p>
+        <div class="timer-container">
+            <div class="timer-bar" id="timerBar"></div>
+            <div class="timer-text" id="timerText">🕒 10</div>
+        </div>
         <div class="answer-container hidden">
             <div class="answer a"></div>
             <div class="answer b"></div>
