Add Uzbek comments and improve code structure
Added detailed Uzbek-language comments throughout all JS and HTML files for better code clarity and maintainability. Improved code structure by grouping related logic, clarifying function purposes, and enhancing DOM manipulation. Updated HTML files for clearer sectioning and documentation. No functional changes were made to the quiz logic.

--- a/khoot/home.html
+++ b/khoot/home.html
@@ -1,67 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Khoot Clone</title>
-    <!-- Style link -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Script link -->
-     <script type="module" src="JS/home.js" defer></script>
-     <script src="JS/user.js" defer></script>
-     <script src="JS/navbar.js" defer></script>
-</head>
-<body>
+
+    <!-- ===================== CSS ===================== -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- ===================== JS ===================== -->
+    <script type="module" src="JS/home.js" defer></script>
+    <script src="JS/user.js" defer></script>
+    <script src="JS/navbar.js" defer></script>
+  </head>
+
+  <body>
+    <!-- ===================== NAVBAR ===================== -->
     <div class="navbar">
-        <div class="nav-container">
-            <div class="logo">Khoot Clone</div>
-            <nav>
-                <a href="#" id="home">Home</a>
-                <a href="#" id="settings">Settings</a>
-            </nav>
-        </div>
+      <div class="nav-container">
+        <!-- Logo / Brand -->
+        <div class="logo">Khoot Clone</div>
+
+        <!-- Navigation -->
+        <nav>
+          <!-- Home sahifaga qaytish -->
+          <a href="#" id="home">Home</a>
+
+          <!-- Settings sahifasini ochish -->
+          <a href="#" id="settings">Settings</a>
+        </nav>
+      </div>
     </div>
+
+    <!-- ===================== MAIN CONTENT ===================== -->
     <div class="main-content">
-        <div id="loadingContainer" class="loading-container">
+      <!-- ===================== LOADING SCREEN ===================== -->
+      <!-- Savollar yuklanayotganda ko‘rinadi -->
+      <div id="loadingContainer" class="loading-container">
         <div class="loading-spinner"></div>
         <p>Loading questions...</p>
-    </div>
-    <section class="questions-container hidden" id="questionsContainer">
+      </div>
+
+      <!-- ===================== QUIZ CONTAINER ===================== -->
+      <!-- Asosiy quiz bloki (start bosilgandan keyin ochiladi) -->
+      <section class="questions-container hidden" id="questionsContainer">
+        <!-- ===================== QUESTION TEXT ===================== -->
+        <!-- Hozirgi savol -->
         <p class="questions hidden">Hello word</p>
+
+        <!-- ===================== TIMER ===================== -->
+        <!-- Savol uchun vaqt paneli -->
         <div class="timer-container">
-            <div class="timer-bar" id="timerBar"></div>
-            <div class="timer-text" id="timerText">🕒 10</div>
+          <div class="timer-bar" id="timerBar"></div>
+          <div class="timer-text" id="timerText">🕒 10</div>
         </div>
+
+        <!-- ===================== ANSWERS ===================== -->
+        <!-- Variantlar (A, B, C, D) -->
         <div class="answer-container hidden">
-            <div class="answer a"></div>
-            <div class="answer b"></div>
-            <div class="answer c"></div>
-            <div class="answer d"></div>
+          <div class="answer a"></div>
+          <div class="answer b"></div>
+          <div class="answer c"></div>
+          <div class="answer d"></div>
         </div>
-    </section>
+      </section>
     </div>
 
+    <!-- ===================== LEADERBOARD ===================== -->
+    <!-- Eng yaxshi 3 o‘yinchi -->
     <aside class="leaderboard-sidebar">
-        <h2>Top 3 Players</h2>
-        <div class="leaderboard-list">
-            <div class="player">
-                <span class="rank">1</span>
-                <span class="name">Player1</span>
-                <span class="score">10</span>
-            </div>
-            <div class="player">
-                <span class="rank">2</span>
-                <span class="name">Player2</span>
-                <span class="score">8</span>
-            </div>
-            <div class="player">
-                <span class="rank">3</span>
-                <span class="name">Player3</span>
-                <span class="score">7</span>
-            </div>
+      <!-- Leaderboard sarlavhasi -->
+      <h2>Top 3 Players</h2>
 
-        </div>
-    </section>
-
-</body>
+      <!-- O‘yinchilar ro‘yxati -->
+      <div class="leaderboard-list"></div>
+    </aside>
+  </body>
 </html>
