--- a/khoot/index.html
+++ b/khoot/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Khoot Clone Tillo Game</title>
-	<!-- Styles link -->
-	 <link rel="stylesheet" href="style.css">
-	<!-- Scripts link -->
-	<script src="JS/user.js" defer></script>
-</head>
-<body>
-	<div class="container">
-		<div class="enter">
-			<h1>Khoot Clone o'yini</h1>
-			<p>Khoot Clone o'yiniga xush kelibsiz! O'ynashni boshlash uchun ismingizni kiriting.</p>
-			<form id="userForm">
-				<input type="text" class="nameInput" id="nameInput" placeholder="Ismingizni kiriting">
-				<button id="startButton">O'yinni boshlash</button>
-			</form>
-		</div>
-	</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Khoot Clone Tillo Game</title>
+    <!-- ===================== CSS ===================== -->
+    <link rel="stylesheet" href="style.css" />
+    <!-- ===================== JS ===================== -->
+    <script src="JS/user.js" defer></script>
+  </head>
+
+  <body>
+    <!-- ===================== MAIN CONTAINER ===================== -->
+    <div class="container">
+      <!-- ===================== ENTER SCREEN ===================== -->
+      <div class="enter">
+        <h1>Khoot Clone o'yini</h1>
+        <p>
+          Khoot Clone o'yiniga xush kelibsiz! O'ynashni boshlash uchun
+          ismingizni kiriting.
+        </p>
+
+        <!-- ===================== USER FORM ===================== -->
+        <!-- Foydalanuvchi ismini olish uchun forma -->
+        <form id="userForm">
+          <!-- Ism kiritish inputi -->
+          <input
+            type="text"
+            class="nameInput"
+            id="nameInput"
+            placeholder="Ismingizni kiriting"
+          />
+
+          <!-- O‘yinni boshlash tugmasi -->
+          <button id="startButton">O'yinni boshlash</button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
